--- a/jenkins/templates/jenkins-volume.yaml
+++ b/jenkins/templates/jenkins-volume.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: jenkins-pv
-  namespace: jenkins
+  name: {{ template "jenkins.fullname" . }}
+  namespace: {{ template "jenkins.namespace" . }}
 spec:
   storageClassName: jenkins-pv
   accessModes:
@@ -17,6 +17,6 @@ spec:
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: jenkins-pv
+  name: {{ template "jenkins.fullname" . }}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
