--- a/microservice/templates/nginx-ingress.yaml
+++ b/microservice/templates/nginx-ingress.yaml
@@ -5,20 +5,28 @@ metadata:
   namespace: easytrip
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
+  ingressClassName: nginx
   rules:
-    - host:
+    - host: easytrip.kro.kr
       http:
         paths:
-          - path: /.*
+          - path: /jenkins
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: jenkin-jenkins
+                port:
+                  number: 8080
+          - path: /
             pathType: ImplementationSpecific
             backend:
               service:
                 name: nginx-service
                 port:
-                  number: 443
+                  number: 80
   tls:
-    - hosts:
+    - hosts: 
         - easytrip.kro.kr
+      secretName: nginx-tls-secret
